# brewui

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  FakeApp.vue  index.css  main.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: brew.icns
src-tauri/src/: components.rs  main.rs
src-tauri/src/components/: info.rs  metadata.rs  response.rs
src/bindings/: Analytic.ts  Bottle.ts  Dependencies.ts  File.ts  Metadata.ts  Root.ts  Versions.ts
src/components/: CmdLoading.vue  Details.vue  Installed.vue  List.vue
